// Prisma schema — Padel Tournaments
// learn more: https://pris.ly/d/prisma-schema
//
// Auth tables (User/Session/Account/Verification) are generated by
// `npx @better-auth/cli generate`. Domain fields are added onto the generated
// User model below. The password credential lives in the Account table
// (scrypt-hashed by Better Auth) — User intentionally has no such column.

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model User {
  id            String    @id
  name          String
  email         String
  emailVerified Boolean   @default(false)
  image         String?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  // Role via Better Auth admin() plugin. "player" | "admin" (admin seeded in plan 02).
  role          String    @default("player")
  banned        Boolean?  @default(false)
  banReason     String?
  banExpires    DateTime?
  // --- Domain fields (Padel) ---
  // courtSide is NOT collected at signup; defaults "either", editable in profile.
  courtSide     String    @default("either") // "left" | "right" | "either"
  // Required unique human-readable handle (USER-01/USER-02). Collected at signup via
  // Better Auth additionalFields; @@unique below is the DB source of truth (BINARY/
  // case-sensitive — exact-match per the locked decision, no COLLATE NOCASE).
  nickname      String
  phone         String? // optional, display-only
  // Required (Phase 7, USER req): one of 5 latin tiers. Better Auth additionalField
  // is required:true so signUp always carries it; DB column is NOT NULL.
  skillLevel    String // "beginner"|"progressing"|"intermediate"|"advanced"|"pro"
  birthDate     DateTime? // optional date of birth
  sessions      Session[]
  accounts      Account[]
  // Pair back-relations (Phase 3). A user is player1 in some pairs and player2 in
  // others; named relations disambiguate the two FKs on Pair.
  pairsAsP1     Pair[]    @relation("PairPlayer1")
  pairsAsP2     Pair[]    @relation("PairPlayer2")
  // Multiformat back-relations (Phase 7). Named relations disambiguate the 4 User
  // FKs on RoundMatch and the single FKs on TournamentPlayer/PlayerMatchScore.
  tournamentPlayers TournamentPlayer[] @relation("TournamentPlayerUser")
  roundMatchesAsA1  RoundMatch[]       @relation("RMTeamA1")
  roundMatchesAsA2  RoundMatch[]       @relation("RMTeamA2")
  roundMatchesAsB1  RoundMatch[]       @relation("RMTeamB1")
  roundMatchesAsB2  RoundMatch[]       @relation("RMTeamB2")
  playerMatchScores PlayerMatchScore[] @relation("PlayerMatchScoreUser")

  @@unique([email])
  // A1 assumption (register-form.tsx): nickname is the ONLY create-time unique
  // field besides email, so a signup FAILED_TO_CREATE_USER is mapped to a
  // "nickname taken" message. If a second unique create-time field is ever added
  // here, disambiguate server-side (catch P2002, inspect meta.target) instead.
  @@unique([nickname])
  @@map("user")
}

model Session {
  id             String   @id
  expiresAt      DateTime
  token          String
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  ipAddress      String?
  userAgent      String?
  userId         String
  user           User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  impersonatedBy String?

  @@unique([token])
  @@index([userId])
  @@map("session")
}

model Account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  @@index([userId])
  @@map("account")
}

model Verification {
  id         String   @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
  @@map("verification")
}

// --- Domain: Tournament (Phase 2) ---
// Single-elimination pairs tournament. Relation-less for now: Phase 3 (Pair) and
// Phase 4/5 (Match) own those models and will add the back-relations then. status
// is a String (SQLite — no Prisma enum; Pitfall 9), validated by zod + TS-union in
// validation/tournament.ts.
model Tournament {
  id           String    @id @default(cuid())
  name         String
  size         Int // 4 | 8 | 16 — enforced at the app layer via zod
  status       String    @default("registration") // "registration" | "in_progress" | "finished"
  date         DateTime?
  location     String?
  // --- Multiformat config (Phase 7). All additive — defaults preserve old reads. ---
  format          String  @default("playoff")     // "playoff"|"round_robin"|"americano"|"mexicano"
  participantMode String  @default("pairs")        // "pairs"|"singles"
  level           String  @default("intermediate") // one of the 5 skillLevels — matching in Phase 8
  price           Int?    // display price in minor currency units; null = free/unset
  scoringMode     String  @default("sets")         // "sets"|"points"
  totalRounds     Int?    // americano/mexicano round count
  createdAt    DateTime  @default(now())
  // Pair back-relation (Phase 3). Match relation added Phase 4.
  pairs        Pair[]
  matches      Match[]
  // Multiformat back-relations (Phase 7).
  tournamentPlayers TournamentPlayer[]
  rounds            Round[]

  @@map("tournament")
}

// --- Domain: Pair (Phase 3) ---
// A registered pair in a tournament: player1 is the registering player (session
// identity), player2 the chosen partner. seed is filled only by bracket generation
// in Phase 4 (nullable until then). Two per-slot @@unique constraints are DB-level
// defense-in-depth against the same pair being inserted twice in one slot; the
// cross-slot duplicate (a player as player1 here / player2 there) is enforced by the
// transactional findFirst in registration.ts. NO Match relations here — Phase 4 owns
// Match. onDelete: Cascade so deleting a tournament removes its pairs.
model Pair {
  id           String     @id @default(cuid())
  tournamentId String
  tournament   Tournament @relation(fields: [tournamentId], references: [id], onDelete: Cascade)
  player1Id    String
  player1      User       @relation("PairPlayer1", fields: [player1Id], references: [id])
  player2Id    String
  player2      User       @relation("PairPlayer2", fields: [player2Id], references: [id])
  seed         Int? // filled in Phase 4 (bracket generation) — assigned 1..size at generation
  createdAt    DateTime   @default(now())
  // Match back-relations (Phase 4). A pair can be slot A or slot B in matches, and
  // win matches; the three named relations disambiguate the three FKs on Match.
  matchesAsA   Match[]    @relation("MatchPairA")
  matchesAsB   Match[]    @relation("MatchPairB")
  matchesWon   Match[]    @relation("MatchWinner")

  @@unique([tournamentId, player1Id])
  @@unique([tournamentId, player2Id])
  @@map("pair")
}

// --- Domain: Match (Phase 4) ---
// A single node in the pre-generated single-elimination tree. All size-1 matches are
// created at bracket generation, fully wired via nextMatchId + nextSlot. round 1 =
// first round (filled with pairs at generation); later rounds start with null pair
// slots (TBD) and get filled as winners advance (Phase 5). winnerId/result fields are
// nullable here — Phase 5 fills them (and adds setsWonA/B + SetScore, NOT here).
model Match {
  id            String     @id @default(cuid())
  tournamentId  String
  tournament    Tournament @relation(fields: [tournamentId], references: [id], onDelete: Cascade)
  round         Int // 1 = first round; max round = final
  position      Int // 0-based index within the round (layout order)
  pairAId       String?
  pairA         Pair?      @relation("MatchPairA", fields: [pairAId], references: [id])
  pairBId       String?
  pairB         Pair?      @relation("MatchPairB", fields: [pairBId], references: [id])
  winnerId      String? // filled in Phase 5 (winner advancement)
  winner        Pair?      @relation("MatchWinner", fields: [winnerId], references: [id])
  // Cached per-side set-win counts (Phase 5 — display only; winnerId is the
  // advancement source of truth). Null until a result is recorded.
  setsWonA      Int?
  setsWonB      Int?
  // Structured per-set scores (Phase 5). Cascade-deleted with the match; replaced
  // wholesale on a free edit (MATCH-04).
  setScores     SetScore[]
  // Advancement pointer: this match's winner fills nextMatch slot nextSlot ("A"|"B").
  // Self-relation "Bracket": nextMatch is the parent, feederMatches the children. The
  // final match has nextMatchId/nextSlot null.
  nextMatchId   String?
  nextMatch     Match?     @relation("Bracket", fields: [nextMatchId], references: [id])
  feederMatches Match[]    @relation("Bracket")
  nextSlot      String? // "A" | "B"

  // Structural invariant + generate-once backstop (WR-01): at most one match per
  // (tournament, round, position) — a concurrent double-Старт fails here at create.
  @@unique([tournamentId, round, position])
  @@index([tournamentId, round])
  @@map("match")
}

// --- Domain: SetScore (Phase 5) ---
// One row per set within a match (setNumber 1..N, free-form). gamesPair1/gamesPair2
// are the games won by the match's pairA/pairB in that set. Cascade-deleted with the
// match; recordResult deletes+recreates all rows for a match on every (re-)record so
// a free edit (MATCH-04) leaves no stale sets. @@unique([matchId, setNumber]) prevents
// duplicate set numbers within a match.
model SetScore {
  id         String @id @default(cuid())
  matchId    String
  match      Match  @relation(fields: [matchId], references: [id], onDelete: Cascade)
  setNumber  Int
  gamesPair1 Int
  gamesPair2 Int

  @@unique([matchId, setNumber])
  @@map("set_score")
}

// --- Domain: TournamentPlayer (Phase 7) — singles registration ---
// One row per individual player registered into a singles-mode tournament
// (round_robin/americano/mexicano). Cascade with the tournament; the User FK is
// NOT cascaded (deleting a user must not silently erase tournament history) — same
// discipline as Pair.player1.
model TournamentPlayer {
  id           String     @id @default(cuid())
  tournamentId String
  tournament   Tournament @relation(fields: [tournamentId], references: [id], onDelete: Cascade)
  userId       String
  user         User       @relation("TournamentPlayerUser", fields: [userId], references: [id])
  createdAt    DateTime   @default(now())

  @@unique([tournamentId, userId])
  @@index([tournamentId])
  @@map("tournament_player")
}

// --- Domain: Round (Phase 7) — round container for round-based formats ---
// Mexicano materializes rounds one-by-one (each depends on prior standings);
// round_robin/americano can pre-generate all rounds. Cascade with the tournament.
model Round {
  id           String       @id @default(cuid())
  tournamentId String
  tournament   Tournament   @relation(fields: [tournamentId], references: [id], onDelete: Cascade)
  roundNumber  Int
  status       String       @default("pending") // "pending" | "in_progress" | "finished"
  createdAt    DateTime     @default(now())
  matches      RoundMatch[]

  @@unique([tournamentId, roundNumber])
  @@map("round")
}

// --- Domain: RoundMatch (Phase 7) — a court match within a round ---
// Two dynamic teams via 4 nullable User FK. Singles 1v1 fills only teamA1/teamB1;
// pairs round_robin reuses the slots: teamA1/teamA2 = пара A, teamB1/teamB2 = пара B
// (D4 + RESEARCH Open Q1 — no separate pair-slot model). pointsA/pointsB hold the
// points-mode result (arbitrary ints, NOT via SetScore). Cascade with the round; the
// 4 User FKs are NOT cascaded.
model RoundMatch {
  id           String  @id @default(cuid())
  roundId      String
  round        Round   @relation(fields: [roundId], references: [id], onDelete: Cascade)
  courtNumber  Int
  teamA1Id     String?
  teamA1       User?   @relation("RMTeamA1", fields: [teamA1Id], references: [id])
  teamA2Id     String?
  teamA2       User?   @relation("RMTeamA2", fields: [teamA2Id], references: [id])
  teamB1Id     String?
  teamB1       User?   @relation("RMTeamB1", fields: [teamB1Id], references: [id])
  teamB2Id     String?
  teamB2       User?   @relation("RMTeamB2", fields: [teamB2Id], references: [id])
  pointsA      Int?    // points-mode team A score (null until recorded)
  pointsB      Int?    // points-mode team B score (null until recorded)
  playerScores PlayerMatchScore[]

  @@index([roundId])
  @@map("round_match")
}

// --- Domain: PlayerMatchScore (Phase 7) — individual per-player points ---
// Both partners of a team get the SAME team pointsFor. pointsAgainst is REQUIRED
// (tiebreak + mexicano determinism). teamSlot = "A" | "B". Cascade with the match;
// the User FK is NOT cascaded.
model PlayerMatchScore {
  id            String     @id @default(cuid())
  roundMatchId  String
  roundMatch    RoundMatch @relation(fields: [roundMatchId], references: [id], onDelete: Cascade)
  userId        String
  user          User       @relation("PlayerMatchScoreUser", fields: [userId], references: [id])
  teamSlot      String     // "A" | "B"
  pointsFor     Int
  pointsAgainst Int

  @@unique([roundMatchId, userId])
  @@index([userId])
  @@map("player_match_score")
}
